--- a/static/index.html
+++ b/static/index.html
@@ -2,58 +2,85 @@
 <html>
   <head>
     <title>Dragon Heart III</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Amiri:400,700" rel="stylesheet">
     <style>
       html, body {
-        margin: 0;
-        padding: 0;
-        font-size: 16px;
         background-color: #f3f3f3;
         color: #3e3e3e;
-        font-family: serif;
+        font-family: 'Amiri', serif;
+        font-size: 24px;
+        font-weight: 400;
+        margin: 0;
+        padding: 0;
         text-align: center;
       }
 
+      #new-prophecy {
+        background: #3e3e3e;
+        border-radius: 5px;
+        border: 0;
+        color: #f3f3f3;
+        font-family: 'Amiri', serif;
+        font-size: 16px;
+        font-weight: 400;
+        margin: 10px;
+        outline: none;
+        padding: 6px 12px;
+        transition: all 0.1s ease-in-out;
+      }
+
+      #new-prophecy:hover {
+        background-color: #5e5e5e;
+        cursor: pointer;
+      }
+
+      #new-prophecy:active {
+        background: #3e3e3e;
+        color: #ffffff;
+        margin: 12px 10px 8px 10px;
+      }
+
+      #new-prophecy:disabled {
+        background: #7e7e7e;
+        color: #ccc;
+      }
+
       #prophecy-content {
-        max-width: 350px;
         margin: 0 auto;
+        max-width: 420px;
         padding: 20px;
       }
 
       #prophecy-link {
-        font-size: 12px;
         color: #777;
+        font-size: 14px;
         margin: 10px auto;
         padding: 20px;
       }
 
-      #new-prophecy {
-        margin: 10px;
-      }
-
       p {
-        line-height: 24px;
-        margin: 12px 0;
+        line-height: 36px;
+        margin: 24px 0;
         padding: 0;
       }
 
       p:first-child {
-        font-size: 24px;
-        margin-bottom: 24px;
+        font-size: 36px;
+        margin-bottom: 36px;
       }
 
       h1 {
-        max-width: 350px;
+        font-weight: 700;
         margin: 0 auto;
-        padding: 20px;
+        max-width: 420px;
+        padding: 20px 0 0 0;
         text-align: center;
       }
     </style>
   </head>
   <body>
-    <h1>
-      Dragon Heart III
-      <br>— powered by unholy Markov chains
-    </h1>
+    <h1>Dragon Heart III</h1>
     <button id="new-prophecy" disabled>New prophecy</button>
     <div id="prophecy-content"></div>
     <a id="prophecy-link" href="#">permanent link to this prophecy</a>
